--- a/Principal.html
+++ b/Principal.html
@@ -27,7 +27,7 @@
                         <li><a href="#" onclick="location.href='index.html'">Inicio </a></li>
                         <li><a href="#"class="activo">Nuevo</a></li>
                         <li><a href="#Info">informacion</a></li>
-                        <li><a href="#">Contaco</a></li>
+                        <li><a href="#">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
